# ToFMultiCamSuppression

./: CMakeLists.txt  README.md  main.cpp
hlava1/data/: run_interference_program.sh
hlava1/data/0/: .~lock.results0.ods#  0_depth1.txt  0_depth10.txt  0_depth13.txt  0_depth14.txt  0_depth16.txt  0_depth17.txt  0_depth18.txt  0_depth19.txt  0_depth21.txt  0_depth22.txt  0_depth23.txt  0_depth24.txt  0_depth25.txt  0_depth27.txt  0_depth29.txt  0_depth3.txt  (+27 more)
hlava1/interf/: cloud0_0.ply  cloud0_1.ply  cloud0_10.ply  cloud0_11.ply  cloud0_12.ply  cloud0_13.ply  cloud0_14.ply  cloud0_15.ply  cloud0_16.ply  cloud0_17.ply  cloud0_18.ply  cloud0_19.ply  cloud0_2.ply  cloud0_20.ply  cloud0_21.ply  cloud0_22.ply  cloud0_23.ply  cloud0_24.ply  cloud0_25.ply  cloud0_26.ply  cloud0_27.ply  cloud0_28.ply  cloud0_29.ply  cloud0_3.ply  cloud0_30.ply  cloud0_31.ply  cloud0_32.ply  cloud0_33.ply  cloud0_34.ply  cloud0_35.ply  cloud0_36.ply  cloud0_37.ply  cloud0_38.ply  cloud0_39.ply  cloud0_4.ply  cloud0_40.ply  cloud0_41.ply  cloud0_42.ply  cloud0_43.ply  cloud0_44.ply  (+257 more)
hlava1/ref/: 0_depth0.hdr  0_depth1.hdr  0_depth2.hdr  1_depth0.hdr  1_depth1.hdr  1_depth2.hdr  2_depth0.hdr  2_depth1.hdr  2_depth2.hdr  3_depth0.hdr  3_depth1.hdr  3_depth2.hdr  4_depth0.hdr  4_depth1.hdr  4_depth2.hdr  5_depth0.hdr  5_depth1.hdr  5_depth2.hdr  cloud0_0.ply  cloud0_1.ply  cloud0_2.ply  cloud0_3.ply  cloud0_4.ply  cloud0_5.ply  cloud1_0.ply  cloud1_1.ply  cloud1_2.ply  cloud1_3.ply  cloud1_4.ply  cloud1_5.ply  cloud2_0.ply  cloud2_1.ply  cloud2_2.ply  cloud2_3.ply  cloud2_4.ply  cloud2_5.ply
(+412 files in other folders)
